# LexonGraph

./: .gitattributes  .gitignore  Cargo.toml  README.md
crates/lexongraph-adaptive-planning-policy/: Cargo.toml
crates/lexongraph-adaptive-planning-policy/src/: lib.rs
crates/lexongraph-adaptive-planning-policy/tests/: spec_validation.rs
crates/lexongraph-block-inspect/: Cargo.toml
crates/lexongraph-block-inspect/src/: main.rs
crates/lexongraph-block-inspect/tests/: spec_validation.rs
crates/lexongraph-block-legacy-migrate/: Cargo.toml
crates/lexongraph-block-legacy-migrate/src/: legacy_leaf.rs  main.rs  manifest.rs  source_fs.rs
crates/lexongraph-block-legacy-migrate/tests/: spec_validation.rs
crates/lexongraph-block-store/: Cargo.toml
crates/lexongraph-block-store-azure/: Cargo.toml
crates/lexongraph-block-store-azure-sdk/: Cargo.toml
crates/lexongraph-block-store-azure-sdk/src/: lib.rs
crates/lexongraph-block-store-azure-sdk/tests/: conformance_feature.rs  live_azure.rs  spec_validation.rs
crates/lexongraph-block-store-azure-sdk/tests/support/: mod.rs
crates/lexongraph-block-store-azure-table/: Cargo.toml
crates/lexongraph-block-store-azure-table-v2/: Cargo.toml
crates/lexongraph-block-store-azure-table-v2/src/: lib.rs
crates/lexongraph-block-store-azure-table-v2/tests/: live_azure.rs
crates/lexongraph-block-store-azure-table/src/: lib.rs
crates/lexongraph-block-store-azure-table/tests/: live_azure.rs
crates/lexongraph-block-store-azure/src/: lib.rs
crates/lexongraph-block-store-azure/tests/: conformance_feature.rs  live_azure.rs  spec_validation.rs
crates/lexongraph-block-store-azure/tests/support/: mod.rs
crates/lexongraph-block-store-fs/: Cargo.toml
crates/lexongraph-block-store-fs/src/: lib.rs
crates/lexongraph-block-store-fs/tests/: conformance_feature.rs  spec_validation.rs
crates/lexongraph-block-store-memory/: Cargo.toml
crates/lexongraph-block-store-memory/src/: lib.rs
crates/lexongraph-block-store-memory/tests/: conformance_feature.rs  spec_validation.rs  versioned_support.rs
crates/lexongraph-block-store-memory/tests/support/: mod.rs
crates/lexongraph-block-store-overlay/: Cargo.toml
crates/lexongraph-block-store-overlay/src/: lib.rs
crates/lexongraph-block-store-overlay/tests/: conformance_feature.rs  spec_validation.rs
crates/lexongraph-block-store-overlay/tests/support/: mod.rs
crates/lexongraph-block-store-zip/: Cargo.toml
crates/lexongraph-block-store-zip/src/: lib.rs
crates/lexongraph-block-store-zip/tests/: spec_validation.rs
crates/lexongraph-block-store/src/: lib.rs
crates/lexongraph-block-store/tests/: conformance_feature.rs
crates/lexongraph-dcbc-streaming/: Cargo.toml
crates/lexongraph-dcbc-streaming/src/: lib.rs  solver.rs
crates/lexongraph-dcbc-streaming/tests/: conformance_feature.rs  spec_validation.rs
crates/lexongraph-dcbc-streaming/tests/support/: mod.rs
crates/lexongraph-directional-pca/: Cargo.toml
crates/lexongraph-directional-pca/src/: lib.rs
crates/lexongraph-directional-pca/tests/: spec_validation.rs
crates/lexongraph-directional-pca/tests/support/: mod.rs
crates/lexongraph-embeddings-openai/: Cargo.toml
crates/lexongraph-embeddings-openai/src/: lib.rs
crates/lexongraph-embeddings-openai/tests/: spec_validation.rs
crates/lexongraph-embeddings-trait/: Cargo.toml
crates/lexongraph-embeddings-trait/src/: lib.rs
crates/lexongraph-embeddings-trait/tests/: conformance_feature.rs  spec_validation.rs
crates/lexongraph-indexer/: Cargo.toml
crates/lexongraph-indexer/src/: lib.rs
crates/lexongraph-indexer/tests/: conformance_feature.rs  spec_validation.rs
crates/lexongraph-linear-algebra-acceleration/: Cargo.toml
crates/lexongraph-linear-algebra-acceleration/src/: lib.rs
crates/lexongraph-pca-chunking/: Cargo.toml
crates/lexongraph-pca-chunking/src/: lib.rs
crates/lexongraph-pca-chunking/tests/: spec_validation.rs
crates/lexongraph-search/: Cargo.toml
crates/lexongraph-search/src/: lib.rs
crates/lexongraph-search/tests/: conformance_feature.rs  spec_validation.rs
crates/lexongraph-spherical-kmeans/: Cargo.toml
crates/lexongraph-spherical-kmeans/src/: lib.rs
crates/lexongraph-spherical-kmeans/tests/: acceleration_validation.rs  conformance_feature.rs  spec_validation.rs
crates/lexongraph-spherical-kmeans/tests/support/: mod.rs
crates/lexongraph-streaming-clustering/: Cargo.toml
crates/lexongraph-streaming-clustering-evaluator/: Cargo.toml
crates/lexongraph-streaming-clustering-evaluator/section4/corpus-panel-suite/: section4-suite-manifest.json  section4-suite-spec.json
crates/lexongraph-streaming-clustering-evaluator/section4/corpus-panel-suite/profiles/: anisotropic-strict-large.json  anisotropic-strict-medium.json  anisotropic-strict-small.json  near-duplicate-padding-small.json  near-duplicate-strict-large.json  near-duplicate-strict-medium.json  near-duplicate-strict-small.json  real-world-harvested-strict-large.json  (+8 more)
crates/lexongraph-streaming-clustering-evaluator/section4/huge-harvest-suite/: section4-suite-manifest.json  section4-suite-spec.json
crates/lexongraph-streaming-clustering-evaluator/section4/realistic-qualification-suite/: section4-suite-spec.json  section5-contract.json
crates/lexongraph-streaming-clustering-evaluator/section4/synthetic-suite/: section4-suite-manifest.json  section4-suite-spec.json
crates/lexongraph-streaming-clustering-evaluator/src/: acceleration.rs  lib.rs  main.rs  section4.rs  section5.rs  section6.rs  section7.rs
crates/lexongraph-streaming-clustering-evaluator/tests/: spec_validation.rs
crates/lexongraph-streaming-clustering-evaluator/tests/support/: mod.rs
crates/lexongraph-streaming-clustering/src/: lib.rs
crates/lexongraph-streaming-clustering/tests/: conformance_feature.rs  spec_validation.rs
crates/lexongraph-streaming-clustering/tests/support/: mod.rs
crates/lexongraph-streaming-indexer/: Cargo.toml
crates/lexongraph-streaming-indexer/src/: lib.rs  v3.rs
crates/lexongraph-streaming-indexer/tests/: conformance_feature.rs  spec_validation.rs
(+310 files in other folders)
