# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[workspace]
members = [
    "crates/lexongraph-block",
    "crates/lexongraph-block-inspect",
    "crates/lexongraph-block-store",
    "crates/lexongraph-block-store-fs",
    "crates/lexongraph-dcbc",
    "crates/lexongraph-directional-pca",
    "crates/lexongraph-embeddings-openai",
    "crates/lexongraph-embeddings-trait",
    "crates/lexongraph-indexer",
    "crates/lexongraph-pca",
    "crates/lexongraph-search",
]
resolver = "2"
