# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[workspace]
members = [
    "crates/lexongraph-block",
    "crates/lexongraph-block-inspect",
    "crates/lexongraph-block-legacy-migrate",
    "crates/lexongraph-block-store",
    "crates/lexongraph-block-store-fs",
    "crates/lexongraph-dcbc-streaming",
    "crates/lexongraph-directional-pca",
    "crates/lexongraph-embeddings-openai",
    "crates/lexongraph-embeddings-trait",
    "crates/lexongraph-pca",
    "crates/lexongraph-search",
    "crates/lexongraph-streaming-clustering",
    "crates/lexongraph-streaming-indexer",
]
resolver = "2"
