# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[workspace]
members = [
    "crates/lexongraph-adaptive-planning-policy",
    "crates/lexongraph-block",
    "crates/lexongraph-block-inspect",
    "crates/lexongraph-block-store",
    "crates/lexongraph-block-store-azure",
    "crates/lexongraph-block-store-azure-sdk",
    "crates/lexongraph-block-store-azure-table",
    "crates/lexongraph-block-store-fs",
    "crates/lexongraph-block-store-memory",
    "crates/lexongraph-block-store-overlay",
    "crates/lexongraph-block-store-zip",
    "crates/lexongraph-dcbc-streaming",
    "crates/lexongraph-directional-pca",
    "crates/lexongraph-embeddings-openai",
    "crates/lexongraph-embeddings-trait",
    "crates/lexongraph-linear-algebra-acceleration",
    "crates/lexongraph-pca",
    "crates/lexongraph-pca-chunking",
    "crates/lexongraph-search",
    "crates/lexongraph-spherical-kmeans",
    "crates/lexongraph-streaming-clustering",
    "crates/lexongraph-streaming-clustering-evaluator",
    "crates/lexongraph-streaming-indexer",
]
resolver = "2"
