# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors

[package]
name = "lexongraph-adaptive-planning-policy"
version = "0.1.0"
edition = "2024"

[dependencies]
lexongraph-dcbc-streaming = { path = "../lexongraph-dcbc-streaming" }
lexongraph-directional-pca = { path = "../lexongraph-directional-pca" }
lexongraph-pca = { path = "../lexongraph-pca" }
lexongraph-streaming-clustering = { path = "../lexongraph-streaming-clustering" }
