[package]
name = "lexongraph-block-legacy-migrate"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2.2"
clap = { version = "4.5.53", features = ["derive"] }
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }
lexongraph-block-store-fs = { path = "../lexongraph-block-store-fs" }

[dev-dependencies]
tempfile = "3"
