# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-block-store-azure-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
azure_core = "1"
azure_storage_blob = "1"
futures = "0.3"
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }

[dev-dependencies]
lexongraph-block-store = { path = "../lexongraph-block-store", features = ["conformance"] }
pollster = "0.4.0"
tokio = { version = "1", features = ["rt", "time", "net"] }
