# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-block-store-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }

[dev-dependencies]
lexongraph-block-store = { path = "../lexongraph-block-store", features = ["conformance"] }
