# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-block-store-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures = "0.3"
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }

[dev-dependencies]
lexongraph-block-store-azure = { path = "../lexongraph-block-store-azure" }
lexongraph-block-store-fs = { path = "../lexongraph-block-store-fs" }
lexongraph-block-store-memory = { path = "../lexongraph-block-store-memory" }
lexongraph-block-store = { path = "../lexongraph-block-store", features = ["conformance"] }
pollster = "0.4.0"
tempfile = "3"
