# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors

[package]
name = "lexongraph-directional-pca"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "2.7.1"
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }
lexongraph-pca = { path = "../lexongraph-pca" }
