# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors

[package]
name = "lexongraph-linear-algebra-acceleration"
version = "0.1.0"
edition = "2024"

[features]
wgpu-accel = ["dep:bytemuck", "dep:pollster", "dep:wgpu"]

[dependencies]
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "1.0.1", optional = true }
serde = { version = "1", features = ["derive"] }
wgpu = { version = "30.0.0", optional = true }
