# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-search"
version = "0.1.0"
edition = "2024"

[features]
# Intended for use from downstream test code via `[dev-dependencies]`.
# Enabling this in `[dependencies]` broadens the crate's public API surface.
conformance = []

[dependencies]
futures = "0.3"
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }

[dev-dependencies]
async-trait = "0.1"
ciborium = "0.2.2"
futures = "0.3"
pollster = "1.0.1"
