# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors

[package]
name = "lexongraph-spherical-kmeans"
version = "0.1.0"
edition = "2024"

[features]
wgpu-accel = ["lexongraph-linear-algebra-acceleration/wgpu-accel"]

[dependencies]
lexongraph-linear-algebra-acceleration = { path = "../lexongraph-linear-algebra-acceleration" }
lexongraph-streaming-clustering = { path = "../lexongraph-streaming-clustering" }
rayon = "1"

[dev-dependencies]
lexongraph-streaming-clustering = { path = "../lexongraph-streaming-clustering", features = ["conformance"] }
