# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-streaming-clustering-evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2"
clap = { version = "4.5.53", features = ["derive"] }
half = "2"
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }
lexongraph-block-store-fs = { path = "../lexongraph-block-store-fs" }
lexongraph-block-store-overlay = { path = "../lexongraph-block-store-overlay" }
lexongraph-block-store-zip = { path = "../lexongraph-block-store-zip" }
lexongraph-streaming-clustering = { path = "../lexongraph-streaming-clustering" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip = "2"

[dev-dependencies]
