# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-streaming-clustering-evaluator"
version = "0.1.0"
edition = "2024"

[features]
wgpu-accel = ["dep:bytemuck", "dep:pollster", "dep:wgpu"]

[dependencies]
bytemuck = { version = "1", features = ["derive"], optional = true }
ciborium = "0.2"
clap = { version = "4.5.53", features = ["derive"] }
half = "2"
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }
lexongraph-block-store-fs = { path = "../lexongraph-block-store-fs" }
lexongraph-block-store-overlay = { path = "../lexongraph-block-store-overlay" }
lexongraph-block-store-zip = { path = "../lexongraph-block-store-zip" }
lexongraph-dcbc-streaming = { path = "../lexongraph-dcbc-streaming" }
lexongraph-directional-pca = { path = "../lexongraph-directional-pca" }
lexongraph-pca-chunking = { path = "../lexongraph-pca-chunking" }
lexongraph-streaming-clustering = { path = "../lexongraph-streaming-clustering" }
pollster = { version = "0.4.0", optional = true }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
wgpu = { version = "29.0.3", optional = true }
zip = "2"

[dev-dependencies]
