# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-streaming-clustering-evaluator"
version = "0.1.0"
edition = "2024"

[features]
wgpu-accel = [
    "dep:bytemuck",
    "dep:wgpu",
    "lexongraph-linear-algebra-acceleration/wgpu-accel",
    "lexongraph-spherical-kmeans/wgpu-accel",
]

[dependencies]
async-trait = "0.1"
bytemuck = { version = "1", features = ["derive"], optional = true }
ciborium = "0.2"
clap = { version = "4.5.53", features = ["derive"] }
half = "2"
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }
lexongraph-block-store-fs = { path = "../lexongraph-block-store-fs" }
lexongraph-block-store-overlay = { path = "../lexongraph-block-store-overlay" }
lexongraph-block-store-zip = { path = "../lexongraph-block-store-zip" }
lexongraph-dcbc-streaming = { path = "../lexongraph-dcbc-streaming" }
lexongraph-directional-pca = { path = "../lexongraph-directional-pca" }
lexongraph-linear-algebra-acceleration = { path = "../lexongraph-linear-algebra-acceleration" }
lexongraph-pca-chunking = { path = "../lexongraph-pca-chunking" }
lexongraph-search = { path = "../lexongraph-search" }
lexongraph-spherical-kmeans = { path = "../lexongraph-spherical-kmeans" }
lexongraph-streaming-indexer = { path = "../lexongraph-streaming-indexer" }
lexongraph-embeddings-trait = { path = "../lexongraph-embeddings-trait" }
lexongraph-streaming-clustering = { path = "../lexongraph-streaming-clustering" }
pollster = "0.4.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
tempfile = "3"
wgpu = { version = "30.0.0", optional = true }
zip = "8"

[dev-dependencies]
futures = "0.3"
