# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonGraph contributors
[package]
name = "lexongraph-streaming-indexer"
version = "0.2.0"
edition = "2024"

[features]
# Intended for use from downstream test code via `[dev-dependencies]`.
# Enabling this in `[dependencies]` broadens the crate's public API surface.
conformance = ["dep:pollster"]

[dependencies]
ciborium = "0.2.2"
half = "2.7.1"
lexongraph-adaptive-planning-policy = { path = "../lexongraph-adaptive-planning-policy" }
lexongraph-block = { path = "../lexongraph-block" }
lexongraph-block-store = { path = "../lexongraph-block-store" }
lexongraph-dcbc-streaming = { path = "../lexongraph-dcbc-streaming" }
lexongraph-directional-pca = { path = "../lexongraph-directional-pca" }
lexongraph-embeddings-trait = { version = "0.1.0", path = "../lexongraph-embeddings-trait" }
lexongraph-spherical-kmeans = { path = "../lexongraph-spherical-kmeans" }
lexongraph-streaming-clustering = { path = "../lexongraph-streaming-clustering" }
pollster = { version = "0.4.0", optional = true }
sha2 = "0.11.0"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
